# zero2prod

./: .travis.yml  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: production.yml
migrations/: 20210707064602_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
